--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,13 @@
 <body>
 
   <h1>hw-13-image-finder</h1>
+
   <form class="search-form" id="search-form">
     <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
+    <button type="submit" id="search">Search</button>
   </form>
 
-  <ul class="gallery">
+  <ul class="gallery" data-gallery>
 
   </ul>
   <!-- HTML image reference example. -->
