--- a/src/index.html
+++ b/src/index.html
@@ -2,28 +2,32 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>hw-13-image-finder</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>hw-13-image-finder</title>
 
 
 </head>
 
 <body>
 
-  <h1>hw-13-image-finder</h1>
+    <h1 class="header">hw-13-image-finder</h1>
 
-  <form class="search-form" id="search-form">
-    <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
-    <button type="submit" id="search">Search</button>
-  </form>
+    <form class="search-form" id="search-form">
+        <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
+        <button type="submit" id="search">Search</button>
+    </form>
 
-  <ul class="gallery" data-gallery>
+    <ul class="gallery" data-gallery>
+    </ul>
 
-  </ul>
-  <!-- HTML image reference example. -->
-  <!-- <img src="./images/intro.png" alt="" width="640" /> -->
+    <div class="btn-wrapper">
+        <button id="show-more" class="is-hidden">Show more</button>
+    </div>
+
+    <!-- HTML image reference example. -->
+    <!-- <img src="./images/intro.png" alt="" width="640" /> -->
 
 </body>
 
