--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     </ul>
 
     <div class="btn-wrapper">
-        <button id="show-more" class="is-hidden">Show more</button>
+        <button type="button" id="show-more" class="is-hidden">Show more</button>
     </div>
 
     <!-- HTML image reference example. -->
