--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,11 @@
     </ul>
 
     <div class="btn-wrapper">
-        <button type="button" id="show-more" class="is-hidden">Show more</button>
+        <button type="button" id="show-more">
+            <span class="label">
+                <!-- Show more -->
+            </span>
+        </button>
     </div>
 
     <!-- HTML image reference example. -->
